--- a/themes/hugo-creative-portfolio-theme/layouts/_default/single.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/_default/single.html
@@ -47,7 +47,7 @@
 
         </a>
 
-         {{ template "_internal/disqus.html" . }}
+         {{ partial "disqus.html" . }}
       </div>
    
 {{ end }}
