--- a/themes/tuftesque/layouts/index.html
+++ b/themes/tuftesque/layouts/index.html
@@ -10,6 +10,7 @@
 </style>
 <div id="homepage">
 {{ partial "brand.html" . }}
+{{ partial "banner.html" . }}
 
 {{ range .Site.Pages }}
   {{if eq .Type "post" }}
