--- a/themes/minimo/layouts/partials/footer.html
+++ b/themes/minimo/layouts/partials/footer.html
@@ -1,6 +1,7 @@
     <footer id='footer' class='footer-container'>
       <div class='footer'>
         {{ partial "nav/menus/social" . }}
+        {{ partial "foot_custom.html" . }}
 
         <div class='copyright'>
           {{ partial "footer/copyright" . }}
