--- a/themes/minimo/layouts/partials/header.html
+++ b/themes/minimo/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <html lang='{{ .Site.Language.Lang }}'>
 
 {{ partial "head/head" . }}
-
+{{ partial "head_custom.html" . }}
 <body class='{{ .Kind }}'>
   <div class='site'>
     <header id='header' class='header-container'>
