--- a/themes/minimo/layouts/index.html
+++ b/themes/minimo/layouts/index.html
@@ -1,4 +1,6 @@
 {{ partial "header" . }}
+{{ partial "head/head" . }}
+{{ partial "head_custom.html" . }}
 
 <main class='main'>
   {{ if .Content }}
