--- a/themes/minimo/layouts/partials/foot_custom.html
+++ b/themes/minimo/layouts/partials/foot_custom.html
@@ -1,6 +1,9 @@
 <script src="//cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
 <script src="//cdn.bootcss.com/highlight.js/9.12.0/languages/r.min.js"></script>
 
+<link href='//fonts.googleapis.com/css?family={{ .Site.Params.fontbody }}' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family={{ .Site.Params.fontheading }}' rel='stylesheet' type='text/css'>
+
 <script>
 hljs.configure({languages: []});
 hljs.initHighlightingOnLoad();
