--- a/themes/minimo/layouts/partials/head_custom.html
+++ b/themes/minimo/layouts/partials/head_custom.html
@@ -1,4 +1,4 @@
-<link href="//cdn.bootcss.com/highlight.js/9.12.0/styles/tomorrow-night.min.css" rel="stylesheet">
+<link href="//cdn.bootcss.com/highlight.js/9.12.0/styles/codepen-embed.min.css" rel="stylesheet">
 
 <link href='//fonts.googleapis.com/css?family={{ .Site.Params.fontbody }}' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family={{ .Site.Params.fontheading }}' rel='stylesheet' type='text/css'>
