--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,8 +1,24 @@
+@import url(https://fonts.googleapis.com/css?family=Work+Sans:400,500);
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 .content h1,
 .content h2,
 .content h3,
 .content h4,
 .content h5,
-.content h6 {
-  color: #511F6D;
+.content h6,
+.subtitle, .title {
+  font-family: 'Work Sans', sans-serif;
+  font-weight:500;
+  color:#000000;
+}
+
+body {
+  font-family: 'Work Sans', sans-serif;
+  font-weight:400;
 }
