--- a/themes/kiss/layouts/partials/header.html
+++ b/themes/kiss/layouts/partials/header.html
@@ -11,6 +11,9 @@
 {{ if .Site.Params.Info.enableSocial }}
 {{- partial "social/opengraph" . -}}
 {{ end }}
+<link rel="stylesheet" href="{{"css/foundation.css" | absURL}}" rel="stylesheet" id="theme-stylesheet">
+<script src="{{ "js/highlight.pack.js" | absURL }}"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css"/>
 {{- range .Site.Params.Assets.customCSS -}}
 <link rel='stylesheet' href='{{ . | absURL }}'>
