--- a/themes/kiss/layouts/partials/header.html
+++ b/themes/kiss/layouts/partials/header.html
@@ -18,7 +18,7 @@
 {{- range .Site.Params.Assets.customCSS -}}
 <link rel='stylesheet' href='{{ . | absURL }}'>
 {{- end -}}
-{{ with .OutputFormats.Get "rss" -}}
+{{ range .AlternativeOutputFormats -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
 {{ end -}}
 </head>
