--- a/themes/kiss/layouts/index.html
+++ b/themes/kiss/layouts/index.html
@@ -2,9 +2,10 @@
 {{ partial "nav" . }}
 <section class="section">
   <div class="container">
+    {{ $paginator := .Paginate (where .Pages "Params.hidden" "ne" true) }}
     {{ range sort .Paginator.Pages }}
     <article>
-      <div class="subtitle is-6 is-pulled-right">
+      <div class="subtitle tags is-6 is-pulled-right">
         {{ if .Params.tags }}
         {{ partial "tags" .Params.tags }}
         {{ end }}
@@ -12,19 +13,7 @@
       <h2 class="subtitle is-6">{{ .Date.Format "January 2, 2006" }}</h2>
       <h1 class="title"><a href="{{ .Permalink }}">{{ .Title }}</a>{{ if .Draft }} ::Draft{{ end }}</h1>
       <div class="content">
-        {{- with .Description -}}
-  {{- . -}}
-{{- else -}}
-  {{- if .IsPage -}}
-    {{- .Summary | plainify | safeHTML -}}
-  {{- else -}}
-    {{- with .Site.Params.Info.description -}}
-      {{- . -}}
-    {{- end -}}
-  {{- end -}}
-{{- end -}}
-
-        
+        {{ .Summary | plainify | safeHTML }}
         {{ if .Truncated }}
         <a class="button is-link" href="{{ .Permalink }}" style="height:28px">
           Read more
