--- a/themes/kiss/layouts/partials/footer.html
+++ b/themes/kiss/layouts/partials/footer.html
@@ -9,5 +9,11 @@
 {{ if .Site.GoogleAnalytics }}
 {{ template "_internal/google_analytics_async.html" . }}
 {{ end }}
+{{ if .Site.Params.matomoAnalytics }}
+{{- partial "analytics/matomo" . -}}
+{{ end }}
+{{ if .Site.Params.fathomAnalytics }}
+{{- partial "analytics/fathom" . -}}
+{{ end }}
 </body>
 </html>
