--- a/themes/kiss/layouts/index.html
+++ b/themes/kiss/layouts/index.html
@@ -13,7 +13,17 @@
       <h2 class="subtitle is-6">{{ .Date.Format "January 2, 2006" }}</h2>
       <h1 class="title"><a href="{{ .Permalink }}">{{ .Title }}</a>{{ if .Draft }} ::Draft{{ end }}</h1>
       <div class="content">
-        {{ .Summary | plainify | safeHTML }}
+        {{- with .Description -}}
+  {{- . -}}
+{{- else -}}
+  {{- if .IsPage -}}
+    {{- .Summary | plainify | safeHTML -}}
+  {{- else -}}
+    {{- with .Site.Params.Info.description -}}
+      {{- . -}}
+    {{- end -}}
+  {{- end -}}
+{{- end -}}
         {{ if .Truncated }}
         <a class="button is-link" href="{{ .Permalink }}" style="height:28px">
           Read more
