--- a/themes/kiss/layouts/partials/social/twitter.html
+++ b/themes/kiss/layouts/partials/social/twitter.html
@@ -5,3 +5,4 @@
     <meta name='twitter:site' content='@{{- .Site.Params.Social.twitter -}}'>
 {{- end -}}
 <meta name='twitter:creator' content='@{{- .Site.Params.Social.twitter -}}'>
+<meta name='twitter:description' content='{{- .Site.Params.info.description -}}'>
