--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -15,7 +15,7 @@ h6,
 .title {
   font-family: 'Work Sans Bold', sans-serif;
   font-weight: 700;
-  color:#4C4C4C;
+  color:#222324;
 }
 
 .subtitle {
