--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -21,3 +21,14 @@ body {
   font-family: 'Work Sans', sans-serif;
   font-weight: 400;
 }
+
+.section {
+  background-color: #fff;
+  padding: 20px 0px;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0px 20px;
+}
