--- a/themes/kiss/layouts/partials/header.html
+++ b/themes/kiss/layouts/partials/header.html
@@ -18,7 +18,7 @@
 <link href="{{ .Site.RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 {{ end }}
 
-<link rel="stylesheet" href="{{"css/foundation.css" | absURL}}" rel="stylesheet" id="theme-stylesheet">
+<link rel="stylesheet" href="{{"css/grayscale.css" | absURL}}" rel="stylesheet" id="theme-stylesheet">
 <script src="{{ "js/highlight.pack.js" | absURL }}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <link rel="stylesheet" href="{{ "css/style.css" | relURL }}"/>
