--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -33,6 +33,14 @@ body {
   padding: 0 20px;
 }
 
+.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 0.5em;
+  color: #333;
+  background: #f8f8f8;
+}
+
 #wrapper{
 	margin: 0;
 	padding: 0;
