body font size change

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -53,6 +53,10 @@
   font-weight: 300;
 }
 
+.content {
+  font-size: 20px;
+}
+
 body {
   font-family: 'charterregular', sans-serif;
   font-weight: 400;
