--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -58,13 +58,14 @@ body {
   font-weight: 400;
 	background-color: #dcdcdc;
 	text-rendering: optimizeLegibility;
-	line-height: 1.6;
+	line-height: 1.625;
 	font-size: 1rem;
 }
 
-.content p {
+.content {
   margin: 1rem 0;
   text-align: left;
+  font-size: 18px;
 }
 
 strong {
