--- a/layouts/shortcodes/player.html
+++ b/layouts/shortcodes/player.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
 
 {{ $file := .Get 0}}
 
@@ -9,12 +11,10 @@
 		<source src="{{$file}}?raw=1">
 	</audio>
 
-	<div id="wrapper">
 		<!--Audio Player Interface-->
 		<div id="audioplayer">
 			<button id="pButton" class="fa fa-play-circle-o fa-2x"></button>
-		</div>
-		<span id="timeElapsed"></span>
+			<span id="timeElapsed"></span>
 		<span>&nbsp;/&nbsp;</span>
 		<span id="duration"></span>
 		<a href="{{$file}}?dl=1" id="dl" style="text-decoration:none;border-bottom-style: none;">
