--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -53,6 +53,15 @@ h1, h2, h3, h4, h5, h6,
 	font-size: 1rem;
 }
 
+// syntax highlighting
+.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 0.5em;
+  color: #333;
+  background: #f8f8f8;
+}
+
 // audio player
 #audioplayer { 
 	display: flex;
