--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -62,6 +62,11 @@ h1, h2, h3, h4, h5, h6,
   background: #f8f8f8;
 }
 
+// image width
+.post img {
+  max-width: 100%;
+}
+
 // audio player
 #audioplayer { 
 	display: flex;
