apply work sans to most things

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,6 +1,6 @@
 // home stop colour
 .fancy {
-  color: #1e88e5;
+  color: #C3FBF4;
 }
 
 // custom fonts
@@ -38,10 +38,8 @@
     font-style: italic;
 }
 
-h1, h2, h3, h4, h5, h6,
-.title {
-  font-family: 'Work Sans Bold', sans-serif;
-  font-weight: 700;
+html {
+  font-family: 'Work Sans', sans-serif;
   color: #222324;
 }
 
