--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -4,8 +4,8 @@
 }
 
 // custom fonts
-@import url('https://fonts.googleapis.com/css2?family=Recursive:wght,CASL@300..700,0..1&display=swap'); 
-@import url(https://fonts.googleapis.com/css2?family=Recursive:wght,MONO@300,0..1,0..1&display=swap);
+@import url('https://fonts.googleapis.com/css2?family=Recursive:wght,CASL@300..800,0.5&display=swap'); 
+@import url(https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,MONO@300,1,0.5&display=swap);
 
 @font-face {
     font-family: 'charter';
