--- a/layouts/shortcodes/player.html
+++ b/layouts/shortcodes/player.html
@@ -2,6 +2,7 @@
 <html>
   
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/player.css">
 
 {{ $file := .Get 0}}
 
