--- a/themes/lines/assets/scss/styles.scss
+++ b/themes/lines/assets/scss/styles.scss
@@ -1,3 +1,38 @@
+@font-face {
+    font-family: 'recursive';
+    src: url('css/webfonts/Recursive_VF_1.52.woff2') format('woff2-variations');
+    font-weight: 300 1000;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'charter', sans-serif;
+    src: url('css/webfonts/charter_regular-webfont.woff') format('woff');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'charter', sans-serif;
+    src: url('css/webfonts/charter_bold-webfont.woff') format('woff');
+    font-weight: bold;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'charter', sans-serif;
+    src: url('css/webfonts/charter_italic-webfont.woff') format('woff');
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'charter', sans-serif;
+    src: url('css/webfonts/charter_bold_italic-webfont.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
+    font-display: swap;
+}
+
 *,:after,:before {
 	box-sizing:border-box;
 	/*margin:0;*/
@@ -5,7 +40,7 @@
 }
 
 body {
-	font: 1rem/1.5 -apple-system,BlinkMacSystemFont,"avenir next",avenir,helvetica,"helvetica neue",ubuntu,roboto,noto,"segoe ui",arial,sans-serif;
+	font: 1rem/1.5 "charter",-apple-system,BlinkMacSystemFont,"avenir next",avenir,helvetica,"helvetica neue",ubuntu,roboto,noto,"segoe ui",arial,sans-serif;
 	text-rendering:optimizeSpeed;
 }
 
