--- a/themes/lines/assets/scss/styles.scss
+++ b/themes/lines/assets/scss/styles.scss
@@ -1,33 +1,33 @@
 @font-face {
     font-family: 'recursive';
-    src: url('https://ewen.io/css/webfonts/Recursive_VF_1.52.woff2') format('woff2-variations');
+    src: url('css/webfonts/Recursive_VF_1.52.woff2') format('woff2-variations');
     font-weight: 300 1000;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'charter', sans-serif;
-    src: url('https://ewen.io/css/webfonts/charter_regular-webfont.woff') format('woff');
+    src: url('css/webfonts/charter_regular-webfont.woff') format('woff');
     font-display: swap;
 }
 
 @font-face {
     font-family: 'charter', sans-serif;
-    src: url('https://ewen.io/css/webfonts/charter_bold-webfont.woff') format('woff');
+    src: url('css/webfonts/charter_bold-webfont.woff') format('woff');
     font-weight: bold;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'charter', sans-serif;
-    src: url('https://ewen.io/css/webfonts/charter_italic-webfont.woff') format('woff');
+    src: url('css/webfonts/charter_italic-webfont.woff') format('woff');
     font-style: italic;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'charter', sans-serif;
-    src: url('https://ewen.io/css/webfonts/charter_bold_italic-webfont.woff') format('woff');
+    src: url('css/webfonts/charter_bold_italic-webfont.woff') format('woff');
     font-weight: bold;
     font-style: italic;
     font-display: swap;
