--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,9 +14,10 @@
   <link rel="alternate" type="application/atom+xml" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}atom.xml" />
   <link rel="alternate" type="application/json" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}feed.json" />
   <link rel="shortcut icon" type="image/png" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNk+A8AAQUBAScY42YAAAAASUVORK5CYII=">
-   <link rel="stylesheet" href="{{"css/grayscale.css" | absURL}}" rel="stylesheet" id="theme-stylesheet">
+   <link rel="stylesheet" href="{{"css/grayscale.css" | absURL}}" id="theme-stylesheet">
 <script src="{{ "js/highlight.pack.js" | absURL }}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/fonts.css">
   {{ $styles := resources.Get "scss/styles.scss" | toCSS (dict "outputStyle" "compressed") | minify }}
   <style>{{ $styles.Content | safeCSS }}</style>
 
