--- a/themes/lines/assets/scss/styles.scss
+++ b/themes/lines/assets/scss/styles.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-	font: 1rem/1.5 "charter",-apple-system,BlinkMacSystemFont,"avenir next",avenir,helvetica,"helvetica neue",ubuntu,roboto,noto,"segoe ui",arial,sans-serif;
+	font: 1rem/1.5 "Work Sans",-apple-system,BlinkMacSystemFont,"avenir next",avenir,helvetica,"helvetica neue",ubuntu,roboto,noto,"segoe ui",arial,sans-serif;
 	text-rendering:optimizeSpeed;
 }
 
